--- a/restaurant.html
+++ b/restaurant.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <a href="index.html" class="logo">
+            <a href="index.html" class="logo animated bounce">
                 <img src="img\logo.svg" alt="Logo" />
             </a>
             <input type="text" class="input input-address" placeholder="Адрес доставки"/>
@@ -44,7 +44,7 @@
                    </div>
             </div>
             <div class="cards">
-                <div class="card wow fadeInUp">
+                <div class="card wow fadeInUp" data-wow-delay="0.1s">
                    <img src="img/roll1.jpg" alt="image" class="card-image" /> 
                    <div class="card-text">
                        <div class="card-heading">
@@ -61,7 +61,7 @@
                        </div>
                    </div>
                 </div>
-                <div class="card wow fadeInUp">
+                <div class="card wow fadeInUp" data-wow-delay="0.2s">
                     <img src="img/roll2.jpg" alt="image2" class="card-image" /> 
                     <div class="card-text">
                        <div class="card-heading">
@@ -78,7 +78,7 @@
                        </div>
                    </div>
                  </div>
-                 <div class="card wow fadeInUp">
+                 <div class="card wow fadeInUp" data-wow-delay="0.3s">
                     <img src="img/roll3.jpg" alt="image3" class="card-image" /> 
                     <div class="card-text">
                         <div class="card-heading">
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                  </div>
-                 <div class="card wow fadeInUp">
+                 <div class="card wow fadeInUp" data-wow-delay="0.4s">
                     <img src="img/roll4.jpg" alt="image4" class="card-image" /> 
                     <div class="card-text">
                         <div class="card-heading">
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                  </div>
-                 <div class="card wow fadeInUp">
+                 <div class="card wow fadeInUp" data-wow-delay="0.5s">
                     <img src="img/roll5.jpg" alt="image" class="card-image" /> 
                     <div class="card-text">
                         <div class="card-heading">
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                  </div>
-                 <div class="card wow fadeInUp">
+                 <div class="card wow fadeInUp" data-wow-delay="0.6s">
                     <img src="img/roll6.jpg" alt="image" class="card-image" /> 
                     <div class="card-text">
                         <div class="card-heading">
